--- a/events/1617velv/mo/1617velv-mom16-Rankings.html
+++ b/events/1617velv/mo/1617velv-mom16-Rankings.html
@@ -1,2 +1,12 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Missouri Mid MO<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>5906</TD><TD>Camdenton 4-H LASER Middle School #2</TD><TD>8</TD><TD>85</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>5908</TD><TD>Camdenton 4-H LASER Middle School #4</TD><TD>8</TD><TD>55</TD><TD>49</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>11678</TD><TD>Arrow Flight</TD><TD>6</TD><TD>126</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>8136</TD><TD>Raytown C2</TD><TD>6</TD><TD>106</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>5905</TD><TD>Camdenton 4-H LASER Middle School #1</TD><TD>6</TD><TD>81</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>5907</TD><TD>Camdenton 4-H LASER Middle School #3</TD><TD>6</TD><TD>51</TD><TD>49</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>12381</TD><TD>Tiger_STEAM</TD><TD>4</TD><TD>165</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>9798</TD><TD>N.E.R.D.S</TD><TD>4</TD><TD>85</TD><TD>46</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>11092</TD><TD>The Dark Side</TD><TD>2</TD><TD>85</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>11785</TD><TD>Code 31</TD><TD>0</TD><TD>115</TD><TD>60</TD><TD>5</TD>
 </TABLE></DIV></HTML>
