--- a/events/1617velv/mo/1617velv-mom17-Rankings.html
+++ b/events/1617velv/mo/1617velv-mom17-Rankings.html
@@ -1,2 +1,14 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Missouri Bombers Joebotics<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>4211</TD><TD>The Bombers</TD><TD>10</TD><TD>295</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>11203</TD><TD>DURT (DeSmet United Robotics Team)</TD><TD>8</TD><TD>240</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>5119</TD><TD>The BARYONS</TD><TD>8</TD><TD>180</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>3658</TD><TD>The BOSONS</TD><TD>6</TD><TD>210</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>9856</TD><TD>Eagle Robotics</TD><TD>6</TD><TD>185</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>7547</TD><TD>JoeBotics</TD><TD>6</TD><TD>180</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>5439</TD><TD>The GLUONS</TD><TD>4</TD><TD>235</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>6215</TD><TD>The Gracious Professionals</TD><TD>4</TD><TD>225</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>7525</TD><TD>Nerdy Birds</TD><TD>2</TD><TD>160</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>9328</TD><TD>Oakville Tigers</TD><TD>2</TD><TD>145</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>9612</TD><TD>Oakville Robotics 2</TD><TD>2</TD><TD>115</TD><TD>51</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>6207</TD><TD>The Phoenix</TD><TD>2</TD><TD>110</TD><TD>80</TD><TD>5</TD>
 </TABLE></DIV></HTML>
