--- a/events/1617velv/mo/1617velv-mom18-MatchResultsDetails.html
+++ b/events/1617velv/mo/1617velv-mom18-MatchResultsDetails.html
@@ -1,3 +1,273 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Match Results (w/ Details)</TITLE></head><CENTER><H2>Missouri MIDCS<BR>Match Results (w/ Details)</H2></CENTER><HR>Column Abbreviations:<ul><li>Tot - Total Match Score</li><li>Auto - Autonomous Score</li><li>AutoB - Autonomous Bonus Score</li><li>Tele - Tele-Operated Score</li><li>EndG - End Game Score</li><li>Pen - Penalty Points</li><p> </p><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>&nbsp;</th><TH>&nbsp;</th><TH>&nbsp;</th><TH >&nbsp;</th><TH COLSPAN="6">Red Scores</TH><TH COLSPAN="6">Blue Scores</TH><TR ALIGN=CENTER><TH >Match</TH><TH >Result</TH><TH >Red Teams</TH><TH >Blue Teams</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH><TH >Tot</TH><TH >Auto</TH><TH >AutoB</TH><TH >Tele</TH><TH >EndG</TH><TH >Pen</TH></TR>
 
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-1</TD>
+  <TD ALIGN=LEFT>0-45 B</TD>
+  <TD ALIGN=LEFT>11539 5404 </TD>
+  <TD ALIGN=LEFT>6153 6127 </TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="45" SDNUM="1033;">45</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-2</TD>
+  <TD ALIGN=LEFT>20-53 B</TD>
+  <TD ALIGN=LEFT>10265 9911 </TD>
+  <TD ALIGN=LEFT>8671 5248 </TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="53" SDNUM="1033;">53</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="43" SDNUM="1033;">43</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-3</TD>
+  <TD ALIGN=LEFT>20-30 B</TD>
+  <TD ALIGN=LEFT>10261 5190 </TD>
+  <TD ALIGN=LEFT>9905 7525 </TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-4</TD>
+  <TD ALIGN=LEFT>55-10 R</TD>
+  <TD ALIGN=LEFT>6127 10265 </TD>
+  <TD ALIGN=LEFT>5404 9911 </TD>
+  <TD ALIGN=RIGHT SDVAL="55" SDNUM="1033;">55</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-5</TD>
+  <TD ALIGN=LEFT>60-10 R</TD>
+  <TD ALIGN=LEFT>5190 9905 </TD>
+  <TD ALIGN=LEFT>5248 11539 </TD>
+  <TD ALIGN=RIGHT SDVAL="60" SDNUM="1033;">60</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-6</TD>
+  <TD ALIGN=LEFT>26-30 B</TD>
+  <TD ALIGN=LEFT>8671 6153 </TD>
+  <TD ALIGN=LEFT>10261 7525 </TD>
+  <TD ALIGN=RIGHT SDVAL="26" SDNUM="1033;">26</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="26" SDNUM="1033;">26</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-7</TD>
+  <TD ALIGN=LEFT>35-55 B</TD>
+  <TD ALIGN=LEFT>9905 5248 </TD>
+  <TD ALIGN=LEFT>5404 6127 </TD>
+  <TD ALIGN=RIGHT SDVAL="35" SDNUM="1033;">35</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="55" SDNUM="1033;">55</TD>
+  <TD ALIGN=RIGHT SDVAL="35" SDNUM="1033;">35</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-8</TD>
+  <TD ALIGN=LEFT>41-35 R</TD>
+  <TD ALIGN=LEFT>8671 9911 </TD>
+  <TD ALIGN=LEFT>11539 7525 </TD>
+  <TD ALIGN=RIGHT SDVAL="41" SDNUM="1033;">41</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="41" SDNUM="1033;">41</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="35" SDNUM="1033;">35</TD>
+  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-9</TD>
+  <TD ALIGN=LEFT>20-27 B</TD>
+  <TD ALIGN=LEFT>10261 6153 </TD>
+  <TD ALIGN=LEFT>5190 10265 </TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="27" SDNUM="1033;">27</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="22" SDNUM="1033;">22</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-10</TD>
+  <TD ALIGN=LEFT>10-55 B</TD>
+  <TD ALIGN=LEFT>5248 5404 </TD>
+  <TD ALIGN=LEFT>7525 8671 </TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="55" SDNUM="1033;">55</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="45" SDNUM="1033;">45</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-11</TD>
+  <TD ALIGN=LEFT>75-10 R</TD>
+  <TD ALIGN=LEFT>9905 6153 </TD>
+  <TD ALIGN=LEFT>9911 5190 </TD>
+  <TD ALIGN=RIGHT SDVAL="75" SDNUM="1033;">75</TD>
+  <TD ALIGN=RIGHT SDVAL="15" SDNUM="1033;">15</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="60" SDNUM="1033;">60</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-12</TD>
+  <TD ALIGN=LEFT>95-0 R</TD>
+  <TD ALIGN=LEFT>6127 11539 </TD>
+  <TD ALIGN=LEFT>10265 10261 </TD>
+  <TD ALIGN=RIGHT SDVAL="95" SDNUM="1033;">95</TD>
+  <TD ALIGN=RIGHT SDVAL="55" SDNUM="1033;">55</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="40" SDNUM="1033;">40</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-13</TD>
+  <TD ALIGN=LEFT>12-60 B</TD>
+  <TD ALIGN=LEFT>5404 8671 </TD>
+  <TD ALIGN=LEFT>6153 5190 </TD>
+  <TD ALIGN=RIGHT SDVAL="12" SDNUM="1033;">12</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="12" SDNUM="1033;">12</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="60" SDNUM="1033;">60</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-14</TD>
+  <TD ALIGN=LEFT>30-85 B</TD>
+  <TD ALIGN=LEFT>7525 10265 </TD>
+  <TD ALIGN=LEFT>9905 6127 </TD>
+  <TD ALIGN=RIGHT SDVAL="30" SDNUM="1033;">30</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="85" SDNUM="1033;">85</TD>
+  <TD ALIGN=RIGHT SDVAL="65" SDNUM="1033;">65</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="20" SDNUM="1033;">20</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
+<TR>
+  <TD HEIGHT=17 ALIGN=LEFT>Q-15</TD>
+  <TD ALIGN=LEFT>5-55 B</TD>
+  <TD ALIGN=LEFT>10261 11539 </TD>
+  <TD ALIGN=LEFT>9911 5248 </TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="5" SDNUM="1033;">5</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="55" SDNUM="1033;">55</TD>
+  <TD ALIGN=RIGHT SDVAL="10" SDNUM="1033;">10</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="45" SDNUM="1033;">45</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+  <TD ALIGN=RIGHT SDVAL="0" SDNUM="1033;">0</TD>
+</TR>
 </TABLE></DIV></HTML>
