--- a/events/1617velv/mo/1617velv-mom18-Rankings.html
+++ b/events/1617velv/mo/1617velv-mom18-Rankings.html
@@ -1,2 +1,14 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Missouri MIDCS<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>6127</TD><TD>i-Bots</TD><TD>10</TD><TD>75</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>9905</TD><TD>Rampunzel</TD><TD>8</TD><TD>105</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>7525</TD><TD>Nerdy Birds</TD><TD>6</TD><TD>121</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>8671</TD><TD>Dragons</TD><TD>6</TD><TD>103</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>5190</TD><TD>Technoramic</TD><TD>6</TD><TD>72</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>6153</TD><TD>Knights of the Data Table</TD><TD>6</TD><TD>68</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>5248</TD><TD>The FERMIONS</TD><TD>4</TD><TD>80</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>9911</TD><TD>16 Gigs of RAM</TD><TD>4</TD><TD>80</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>10265</TD><TD>Force Green</TD><TD>4</TD><TD>80</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>10261</TD><TD>AIM-Advanced Idea Macgyvers</TD><TD>2</TD><TD>71</TD><TD>30</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>5404</TD><TD>Titanium Titans</TD><TD>2</TD><TD>67</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>11539</TD><TD>Team Voltage</TD><TD>2</TD><TD>50</TD><TD>95</TD><TD>5</TD>
 </TABLE></DIV></HTML>
