--- a/events/1617velv/mo/1617velv-moq5-Rankings.html
+++ b/events/1617velv/mo/1617velv-moq5-Rankings.html
@@ -1,2 +1,25 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Missouri Blue Valley<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>3409</TD><TD>Astromechs</TD><TD>10</TD><TD>180</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>8819</TD><TD>Mechanicker</TD><TD>10</TD><TD>134</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>6889</TD><TD>Robo Crusaders</TD><TD>9</TD><TD>254</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>4587</TD><TD>Red Hot Techie Peppers</TD><TD>8</TD><TD>275</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>10188</TD><TD>T-N-T</TD><TD>8</TD><TD>235</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>10173</TD><TD>Ravonics Gemini</TD><TD>8</TD><TD>152</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>11457</TD><TD>STARbots</TD><TD>8</TD><TD>87</TD><TD>71</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>10476</TD><TD>Iron Cats</TD><TD>6</TD><TD>250</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>10127</TD><TD>Tesla's Knights</TD><TD>6</TD><TD>175</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>9808</TD><TD>Team Chargers</TD><TD>5</TD><TD>346</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>8412</TD><TD>Gryphons</TD><TD>5</TD><TD>190</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>11908</TD><TD>Gardner Edgerton Electric Kiwis</TD><TD>5</TD><TD>148</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>9960</TD><TD>N.E.R.D.S</TD><TD>4</TD><TD>281</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>6547</TD><TD>CAPS Cobalt Colts</TD><TD>4</TD><TD>176</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>8136</TD><TD>Raytown C2</TD><TD>4</TD><TD>146</TD><TD>132</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>9966</TD><TD>This Side Up</TD><TD>4</TD><TD>146</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>10916</TD><TD>Eagle FTC Robotics</TD><TD>4</TD><TD>144</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>12135</TD><TD>Finite Automata</TD><TD>2</TD><TD>219</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>11357</TD><TD>CrusaderBots</TD><TD>2</TD><TD>120</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>11012</TD><TD>FRONTIER STEM</TD><TD>2</TD><TD>105</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>6751</TD><TD>Robo Vikings</TD><TD>2</TD><TD>70</TD><TD>25</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>10460</TD><TD>Bot Squad</TD><TD>0</TD><TD>141</TD><TD>51</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>11874</TD><TD>Blue Valley CAPS Metal Mavericks</TD><TD>0</TD><TD>138</TD><TD>40</TD><TD>5</TD>
 </TABLE></DIV></HTML>
