add MNsp1 and MNsp2 events

--- a/events/1617velv/mn/1617velv-mnsp1-Rankings.html
+++ b/events/1617velv/mn/1617velv-mnsp1-Rankings.html
@@ -1,2 +1,26 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Minnesota St. Peter 1<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>12049</TD><TD>Rogers #2</TD><TD>9</TD><TD>251</TD><TD>256</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>5330</TD><TD>Robotic Rush</TD><TD>9</TD><TD>231</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>7165</TD><TD>Robotic Surge</TD><TD>8</TD><TD>242</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>4644</TD><TD>Robotic Adrenaline</TD><TD>8</TD><TD>217</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>8101</TD><TD>Robonados</TD><TD>7</TD><TD>237</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>8584</TD><TD>Robotic Spark</TD><TD>7</TD><TD>231</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>7897</TD><TD>The Known Laws of Aviation</TD><TD>7</TD><TD>169</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>4509</TD><TD>Meme Team</TD><TD>7</TD><TD>106</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>8473</TD><TD>Blue Lightning</TD><TD>6</TD><TD>271</TD><TD>110</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>7896</TD><TD>Into The Void</TD><TD>6</TD><TD>188</TD><TD>256</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>4650</TD><TD>Crusader Robotics: Monkey Mechanics</TD><TD>6</TD><TD>179</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>10648</TD><TD>I Have an Idea</TD><TD>6</TD><TD>175</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>9477</TD><TD>Tormsay Otsbay</TD><TD>5</TD><TD>177</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>9972</TD><TD>The Terminators</TD><TD>4</TD><TD>161</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>7190</TD><TD>Green Girls</TD><TD>4</TD><TD>139</TD><TD>64</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>10562</TD><TD>Rock'em Salk'em!</TD><TD>4</TD><TD>133</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>3387</TD><TD>I.C.E.</TD><TD>4</TD><TD>106</TD><TD>45</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>6369</TD><TD>Designosaurs</TD><TD>3</TD><TD>365</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>8005</TD><TD>Robot Renegades</TD><TD>3</TD><TD>216</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>12045</TD><TD>Rogers #1</TD><TD>2</TD><TD>176</TD><TD>110</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>8977</TD><TD>Sunburst</TD><TD>2</TD><TD>161</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>9577</TD><TD>Lake Crystal Knights</TD><TD>2</TD><TD>82</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>9257</TD><TD>Tread Lightly</TD><TD>1</TD><TD>125</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>24</TD><TD>10238</TD><TD>Technical Tigers</TD><TD>0</TD><TD>146</TD><TD>50</TD><TD>5</TD>
 </TABLE></DIV></HTML>
