--- a/events/1617velv/mn/1617velv-mnsp2-Rankings.html
+++ b/events/1617velv/mn/1617velv-mnsp2-Rankings.html
@@ -1,2 +1,26 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Minnesota St. Peter 2<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>7152</TD><TD>Robot Squad</TD><TD>10</TD><TD>288</TD><TD>175</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>11949</TD><TD>Team Tec Man</TD><TD>10</TD><TD>252</TD><TD>165</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>10590</TD><TD>The Monkey Wrench Gang</TD><TD>10</TD><TD>242</TD><TD>175</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>8712</TD><TD>EPIC</TD><TD>8</TD><TD>260</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>9418</TD><TD>Tempest Automatons</TD><TD>8</TD><TD>215</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>7898</TD><TD>Loading Error</TD><TD>8</TD><TD>170</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>8736</TD><TD>TermiRaiders</TD><TD>8</TD><TD>160</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>7588</TD><TD>The PRIDE</TD><TD>8</TD><TD>153</TD><TD>165</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>10364</TD><TD>Time Pilots</TD><TD>6</TD><TD>195</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>7232</TD><TD>Dyna-Bytes</TD><TD>6</TD><TD>145</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>10423</TD><TD>Servo Pros</TD><TD>6</TD><TD>125</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>9249</TD><TD>ET</TD><TD>4</TD><TD>272</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>11904</TD><TD>Black Knights</TD><TD>4</TD><TD>225</TD><TD>63</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>10568</TD><TD>The Regal Kiwis</TD><TD>4</TD><TD>172</TD><TD>110</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>11903</TD><TD>Happy Little Robots</TD><TD>4</TD><TD>140</TD><TD>63</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>11872</TD><TD>Visible Spectrum</TD><TD>4</TD><TD>137</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>11459</TD><TD>White Sabers</TD><TD>2</TD><TD>190</TD><TD>61</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>7899</TD><TD>Crusaders</TD><TD>2</TD><TD>175</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>7589</TD><TD>Ciphers</TD><TD>2</TD><TD>152</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>7290</TD><TD>JagWires</TD><TD>2</TD><TD>140</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>10470</TD><TD>Red Sabers</TD><TD>2</TD><TD>110</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>10469</TD><TD>Black Sabers</TD><TD>2</TD><TD>90</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>9183</TD><TD>Storm Warning</TD><TD>0</TD><TD>245</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>24</TD><TD>11838</TD><TD>The Hot Comodity</TD><TD>0</TD><TD>95</TD><TD>30</TD><TD>5</TD>
 </TABLE></DIV></HTML>
