add fl-tlcmp and pa-ph

--- a/events/1617velv/pa/1617velv-pa-ph-Rankings.html
+++ b/events/1617velv/pa/1617velv-pa-ph-Rankings.html
@@ -1,2 +1,25 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Pennsylvania Philadelphia<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>7960</TD><TD>FSS Falcons</TD><TD>10</TD><TD>63</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>5224</TD><TD>Robowolves</TD><TD>8</TD><TD>95</TD><TD>71</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>6540</TD><TD>Lincoln1</TD><TD>8</TD><TD>89</TD><TD>46</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>8480</TD><TD>Technobots</TD><TD>7</TD><TD>82</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>5488</TD><TD>Robo Dragons</TD><TD>6</TD><TD>152</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>8730</TD><TD>Palumbo</TD><TD>6</TD><TD>149</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>9734</TD><TD>RAD-CLED</TD><TD>6</TD><TD>98</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>5320</TD><TD>RoboLancers Gold</TD><TD>6</TD><TD>92</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>10002</TD><TD>SAB-BOT-TAGE</TD><TD>6</TD><TD>87</TD><TD>71</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>6676</TD><TD>RoboLancers Crimson</TD><TD>6</TD><TD>87</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>6552</TD><TD>Northeast High School</TD><TD>6</TD><TD>87</TD><TD>56</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>12455</TD><TD>Workshop</TD><TD>6</TD><TD>71</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>12084</TD><TD>Really... Simple Machines</TD><TD>6</TD><TD>65</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>11154</TD><TD>Widener-Chester</TD><TD>6</TD><TD>56</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>11493</TD><TD>The Upside Down</TD><TD>5</TD><TD>64</TD><TD>56</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>5506</TD><TD>Edison Robo Owls</TD><TD>4</TD><TD>120</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>9854</TD><TD>Penn Charter Robotics</TD><TD>4</TD><TD>113</TD><TD>53</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>9570</TD><TD>GearGirls</TD><TD>3</TD><TD>79</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>12003</TD><TD>Roboneers</TD><TD>2</TD><TD>120</TD><TD>53</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>5514</TD><TD>Parkway Center City</TD><TD>2</TD><TD>106</TD><TD>37</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>11032</TD><TD>elcentrobots</TD><TD>2</TD><TD>51</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>11610</TD><TD>Tertius Oculus</TD><TD>1</TD><TD>102</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>7883</TD><TD>Iron Patriots</TD><TD>0</TD><TD>96</TD><TD>40</TD><TD>5</TD>
 </TABLE></DIV></HTML>
